@@ -1,3 +1,6 @@
+Sun Oct 11 11:24:27 CEST 2009
+	Adding support for Symbian. -MR
+
 Fri Oct  9 15:21:29 CEST 2009
 	Check for error codes from pthread operations (to help with
 	error diagnostics) and abort if something went wrong. -CG
